# PI_Blackbox

./: README.md  send_date.c
GUI/: CMakeLists.txt  Disk_Use.c  Makefile  Rasp_GUI.c  Rasp_GUI2.glade  Raspi_GUI.glade  my_style.css  send.sh  system.c
InfluxDB/: Influx_Load.c  influxdb.h  install.txt
PCB/FAB_Files/BOM/: PI_Blackbox_BOM_by_Component.xlsx  PI_Blackbox_BOM_by_REF_DES.xlsx
PCB/FAB_Files/Drill Files/: Pi_Blackbox-NPTH-drl_map.gbr  Pi_Blackbox-PTH-drl_map.gbr
PCB/FAB_Files/Gerbers/: Pi_Blackbox-B_Cu.gbr  Pi_Blackbox-B_Mask.gbr  Pi_Blackbox-B_Paste.gbr  Pi_Blackbox-B_SilkS.gbr  Pi_Blackbox-Edge_Cuts.gbr  Pi_Blackbox-F_Cu.gbr  Pi_Blackbox-F_Paste.gbr  Pi_Blackbox-F_SilkS.gbr
PCB/Kicad_Files/: 3.8mmpad1.8mmdrill.kicad_mod  ADS1256.sch  ADS1256_2.sch  Current_Measure.sch  DAC8532.sch  DAC8532sch.sch  DAC8552.sch  DS3231.sch  HLoad_Power_Meas.sch  Heat_Load.sch  Input_Power.sch  MAX31856.sch  PI_Power_Supply.sch  Pi_Blackbox-cache.lib  Pi_Blackbox-rescue.lib  Pi_Blackbox.kicad_pcb  Pi_Blackbox.pro  Pi_Blackbox.sch  Power_Input.sch  Power_Measure.sch  Power_Supply.sch  RELAY.sch  SPI_Level_Translation.sch  THermocouple.sch  Temp_Diode.sch  power_measure-rescue.lib  power_measure.sch
PI_Firmware/: ADS1256.h  DAC_demo.c  DAC_mA.c  DMM_CAL.h  DS3231.c  DUT_Config.txt  Display.c  INA.h  Log.h  MAX31856.h  Pin_Defs.h  Save2.h  Save_Cal.h  mA_Cal.h  relay.c  temp_diode.h  test_save.c
Recipe/: recipe_demo.c
Sockets/: receive.c  send_console.c
server/include/: execution_engine.h
server/src/: Makefile  client.c  execution_engine.c  server.c
(+35 files in other folders)
